--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.3.1",
     "tachyons": "^4.12.0",
+    "tsparticles": "^2.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
